<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_EventType" Id="{2b1a03ee-833d-4213-b523-d3b7c1261de1}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_EventType :
(
	Alarm := 0,
	Message := 1
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>