<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Events" Id="{0806cb2d-f0c5-4462-aabf-fbd08b2aeb83}">
    <Declaration><![CDATA[TYPE ST_Events :
STRUCT
	eEventType : E_EventType;
	eEventSeverity : TcEventSeverity;
	eEventIdentity : UDINT;
	eEventText : STRING(255);
	dtTimeStamped : DATE_AND_TIME ;
	
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>