<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="MAIN" Id="{82d2561c-0b2b-45e9-b59f-2a3ce47a7c13}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	FirstEventInOurSturucture : ST_Events;
  	Boolean :BOOL := FALSE;
	eEventType : E_EventType := E_EventType.Alarm ;
	eEventSeverity : TcEventSeverity := TcEventSeverity.Error;
	eEventIdentity : UDINT := 777;
	eEventText : STRING(255) := 'BeCarefull';
	EventLogger : EvetLogger;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
//FUpdateEventTimeStampedWithSystemTimeStamepd(FirstEventInOurSturucture);  
IF Boolean THEN 
	EventLogger.AddEvent(eEventType,eEventSeverity,eEventIdentity,eEventText);
END_IF
]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="2" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="15" Count="1" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>